--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 group 'Auto-Tests with Selenium'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 11
+sourceCompatibility = 1.8
 
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
@@ -19,6 +19,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
     testImplementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.3.0'
 }
 
 test {
